--- a/views/index.jade
+++ b/views/index.jade
@@ -4,44 +4,27 @@ block extraheader
     script.
         $(document).ready(function () {
 
-            // $.fn.editable.defaults.mode = 'inline';
-
-            // pre-fill
-            getHumanDate($("#select-cancellation-date").val(), function(res) {
-                $("#select-cancellation-date").attr("data-human-date", res);
-            });
-
             // event handlers
             $("#select-category").change(function() {
                 //console.log("category selected: " + el);
                 getContractors($("#select-contractor"));
             });
 
-            $("#select-contractor").change(function() {
+            $("#btn-preview").click(function() {
                 if (!$("#preview").is(":visible")) {
                     $("#preview").removeAttr("hidden");
-                    getPreview($("#preview"));
                 }
+
+                getPreview($("#preview"), {}, function (res) {
+                    $("#preview").find("textarea").text(res.textData);
+                });
             });
 
-            $("#select-cancellation-date").change(function() {
-                getHumanDate($(this).val(),
-                    function(res) {
-                        $(this).attr("data-human-date", res);
-                    });
+            $("#btn-render").click(function() {
+                getPreview($("#preview"), {}, function (res) {
+                    renderPDF(res.pdfData);
+                });
             });
-
-            $("#preview-and-render").submit(function(ev) {
-                var vars = {
-                    contractor: $("#select-contractor").val(),
-                    category: $("#select-category").val(),
-                    cancellationDate: $("#select-cancellation-date").attr("data-human-date")
-                };
-
-                console.log(vars);
-                renderPDF(vars);
-            });
-
         });
 
 
@@ -59,10 +42,12 @@ block content
 
             if preview
                 div(id="preview", class="form-group")
-                    textarea(class="form-control", rows="10", wrap="wrap", id="text-preview")
+                    textarea(class="form-control", rows="10", wrap="wrap",
+                        id="text-preview", spellcheck="false")
             else
                 div(hidden="hidden" id="preview", class="form-group")
-                    textarea(class="form-control", rows="10", wrap="wrap" id="text-preview")
+                    textarea(class="form-control", rows="10", wrap="wrap"
+                        id="text-preview", spellcheck="false")
 
             div(class="form-group")
                 if categories
@@ -84,13 +69,9 @@ block content
 
             div(class="form-group")
                 div(class="btn-toolbar")
-                    button(class="btn btn-default pull-left", type="submit").
+                    button(class="btn btn-default pull-left", type="submit",
+                        id="btn-preview").
                         Preview
-                    button(class="btn btn-warning pull-right", type="submit").
+                    button(class="btn btn-warning pull-right", type="submit",
+                        id="btn-render").
                         Kündigung generieren
-
-
-    if render
-        div(class="col-md-4" id="render")
-    else
-        div(class="col-md-4" hidden="hidden" id="render")
