text building blocks

--- a/views/header.jade
+++ b/views/header.jade
@@ -10,6 +10,7 @@ html(lang="en")
         script(src="js/vfs_fonts.js")
 
         script(src="js/get.js")
+        script(src="js/post.js")
         script(src="js/doc.js")
 
         link(rel="stylesheet", href="css/bootstrap.min.css")
