--- a/views/index.jade
+++ b/views/index.jade
@@ -66,9 +66,11 @@ block content
                     spellcheck="false")
 
             div(class="form-group")
-                if categories
-                    select(id="select-category", class="form-control",
-                        name="category")
+
+                select(id="select-category", class="form-control",
+                    name="category")
+                    option Auswählen...
+                    if categories
                         each category in categories
                             option= category
 
@@ -85,7 +87,6 @@ block content
 
             div(class="form-group")
                 div(class="btn-toolbar")
-
                     button(class="btn btn-warning pull-right", type="submit",
                         id="btn-render").
                         Kündigung generieren
