--- a/views/header.jade
+++ b/views/header.jade
@@ -16,6 +16,7 @@ html(lang="en")
 
         link(rel="stylesheet", href="css/bootstrap.min.css")
         link(rel="stylesheet", href="css/bootstrap-editable.css")
+        link(rel="stylesheet", href="css/custom.css")
 
         meta(name="viewport" content="width=device-width, initial-scale=1")
 
