header margin hack

--- a/views/header.jade
+++ b/views/header.jade
@@ -18,6 +18,8 @@ html(lang="en")
         link(rel="stylesheet", href="css/bootstrap-editable.css")
         link(rel="stylesheet", href="css/custom.css")
 
+        style h2 { margin-bottom: 20px; margin-top: 20px; }
+
         meta(name="viewport" content="width=device-width, initial-scale=1")
 
         block extraheader
