rm'd stray code

--- a/views/index.jade
+++ b/views/index.jade
@@ -41,7 +41,7 @@ block content
 
         h2 Kündigungsmanager
 
-        form(id="preview-and-render", method="post", class)
+        form(id="preview-and-render", method="post")
 
             div(class="form-group")
                 input(type="text", value="#{customerReference}",
